--- a/authmore-resource-sample/build.gradle
+++ b/authmore-resource-sample/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+signArchives.enabled=false
 uploadArchives.enabled = false
