--- a/build.gradle
+++ b/build.gradle
@@ -102,6 +102,8 @@ subprojects {
         sign configurations.archives
     }
 
+    signArchives.enabled = project.hasProperty("signing.keyId")
+
     uploadArchives {
         repositories {
             mavenDeployer {
