--- a/build.gradle
+++ b/build.gradle
@@ -26,17 +26,16 @@ plugins {
     id 'com.bmuschko.docker-spring-boot-application' version '4.8.0'
 }
 
-ext {
-    registryHost = "registry-vpc.cn-beijing.aliyuncs.com"
-    registryRepository = "${registryHost}/letec"
-}
-
 allprojects {
     group = 'com.github.jameszbl'
     version = '1.0.3'
 }
 
 description = 'Authmore - 轻量级 OAuth2 开放平台开发套件'
+
+ext {
+    registryRepository = "registry-vpc.cn-beijing.aliyuncs.com/letec"
+}
 
 subprojects {
 
@@ -61,7 +60,7 @@ subprojects {
 
     docker {
         registryCredentials {
-            url = "${registryHost}"
+            url = "registry-vpc.cn-beijing.aliyuncs.com"
             username = "${System.env.PRIVATE_REG_USERNAME}"
             password = "${System.env.PRIVATE_REG_PASSWORD}"
         }
