--- a/authmore-client-sample/build.gradle
+++ b/authmore-client-sample/build.gradle
@@ -36,3 +36,4 @@ signArchives.enabled = false
 uploadArchives.enabled = false
 dockerBuildImage.enabled = false
 dockerPushImage.enabled = false
+test.enabled = false
