--- a/authmore-admin/build.gradle
+++ b/authmore-admin/build.gradle
@@ -55,5 +55,5 @@ docker {
     }
 }
 
-signArchives.enabled = false
-uploadArchives.enabled = false
+signMavenJavaPublication.enabled = false
+publishMavenJavaPublicationToMavenRepository.enabled = false
