--- a/authmore-platform/build.gradle
+++ b/authmore-platform/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     runtimeOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure'
+    compileOnly "org.springframework.boot:spring-boot-configuration-processor:2.1.2.RELEASE"
 }
 
 dependencyManagement {
