--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
 
   redis:
     image: redis
+    ports:
+     - "6379:6379"
     restart: unless-stopped
     container_name: authmore-redis
     networks:
@@ -49,6 +51,8 @@ services:
 
   mongo:
     image: mongo
+    ports:
+     - "27017:27017"
     restart: unless-stopped
     container_name: authmore-mongo
     networks:
